[feat] send order based on the distance between the restaurant and the user
